Committing with RM's fix on the function and new variables with better names for claity. Also committing CSS changes to account for welcome Div and list spacing.

--- a/assets/css/scrolling.css
+++ b/assets/css/scrolling.css
@@ -31,3 +31,7 @@
 .morediv {
     padding: 5px;
 }
+
+ul {
+    margin-top: 28px;
+}
